src/objects/CongaSettings__c.object
<CustomObject>
    <fields>
        <fullName>Conga_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_80</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_name__c</fullName>
        <inlineHelpText>By default DocuGen will save the document with the template name, this can be overidden by entering a different name in this field</inlineHelpText>
        <label>Document name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Offer_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Offer Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Output_As_Word__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Must be ticked if the document output when merged is to be in word format. If this is not ticked, the document output will be in PDF format</inlineHelpText>
        <label>Output As Word</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Queries__c</fullName>
        <label>Queries</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reports__c</fullName>
        <label>Reports</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SplitMerge__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This must be ticked for offer letter settings only</inlineHelpText>
        <label>SplitMerge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Templates__c</fullName>
        <label>Templates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Use_Docugen__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Docugen</label>
        <type>Checkbox</type>
    </fields>
    <label>DocuGenSetting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Use_Docugen__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>DocuGenSetting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuGenSettings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>